--- a/courses/templates/courses/park-detail.html
+++ b/courses/templates/courses/park-detail.html
@@ -13,7 +13,7 @@
             <ul class="list-group list-group-flush" id="cards">
                 {% for course in course_list %}
                 <li class="list-group-item bg-secondary text-light" style="width: 200px">
-                    <a href="/hole-edit/{{name}}/{{course.holeNumber}}">
+                    <a href="/hole-edit/{{name}}/{{course.id}}">
                         <h5> {{course.holeNumber}}{{course.holeSub}} : {{course.basket}} - {{course.par}}: {{course.distance}}</h5></li>
                 {% endfor %}
             </ul>
