--- a/courses/templates/courses/park-list.html
+++ b/courses/templates/courses/park-list.html
@@ -7,9 +7,9 @@
   <div class='row'>
     <div class='col-xs-2 col-md-3' align='left'>
     <div class='text-light'><h2>Parks:</h2></div>
-      <ul class="list-group list-group-flush"  id="parks">
+      <ul class="list-group list-group-flush text-light"  id="parks">
       {% for course in course_list %}
-        <li class="badge badge-secondary text-light" style="width: 200px"><a href="/park-detail/{{course}}"><h5> {{course}}</h5></li>
+        <li class="badge badge-secondary text-light" style="width: 200px"><a href="/park-detail/{{course}}"><h5> {{course}}</h5></a></li>
         </br> 
       {% endfor %}
     </ul>
