--- a/scorecards/templates/scorecards/card-hole-edit.html
+++ b/scorecards/templates/scorecards/card-hole-edit.html
@@ -19,7 +19,7 @@
         </div>
         <div align="right" class="col col-md-3">
             <button align="right" type="submit" name="NavHole" value="UpdateHole" class="btn btn-primary">
-                Change Hole</button>
+                Select Hole</button>
         </div>
     </div>
     {% comment %} {{ form.as_p }} {% endcomment %}
