--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
+      <script src="{% static 'myScripts.js' %}" ></script>   
+
       <link rel="shortcut icon"type="image/png" href="/static/img/apple-touch-icon.png">
       <meta name="msapplication-TileColor" content="#da532c">
       <meta name="theme-color" content="#ffffff">
       <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initiak-scale=1" />
+      {% comment %} <meta name="viewport" content="width=device-width, initiak-scale=1" /> {% endcomment %}
       <link
         rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -21,7 +24,7 @@
 
         {% endblock %}</title>
     </head>
-    <body class='bg-dark'>
+    <body class='bg-dark' onload='test()'>
       <!-- Main menu code-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button
