--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,20 @@
-{% load static %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
     <head>
-      <script src="{% static 'myScripts.js' %}" ></script>   
-
       <link rel="shortcut icon"type="image/png" href="/static/img/apple-touch-icon.png">
       <meta name="msapplication-TileColor" content="#da532c">
       <meta name="theme-color" content="#ffffff">
       <meta charset="utf-8" />
+      {% load static %}
+      <script src="{% static 'myScripts.js' %}"></script>  
       {% comment %} <meta name="viewport" content="width=device-width, initiak-scale=1" /> {% endcomment %}
     
       <title>{% block title %} 
 
         {% endblock %}</title>
     </head>
-    <body class='bg-dark' onload='test()'>
+    <body class='bg-dark'>
       <!-- Main menu code-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button
@@ -50,6 +50,5 @@
        </div>
        <!-- Defines where templates will be loaded-->
        <!-- Javascript Libraries-->
-  
     </body>
 </html>
