disabled cache in network setting on inspect element

--- a/templates/home.html
+++ b/templates/home.html
@@ -32,8 +32,8 @@
         </div>
         <br /><br />
         <div align="right">
-          <p href="/cards" class="btn btn-primary btn-md " 
-            role="button" aria-disabled="true" onclick="test()">Cards</p>
+          <p href="/cards" 
+            role="button" aria-disabled="true" onclick="tclick()">Cards</p>
         </div>
         <br /><br /><br />
         {% if gameStarted == "true"%} 
