--- a/templates/base.html
+++ b/templates/base.html
@@ -6,13 +6,14 @@
       <meta name="msapplication-TileColor" content="#da532c">
       <meta name="theme-color" content="#ffffff">
       <meta charset="utf-8" />
-      <script src="{% static 'myScripts.js' %}"></script>  
+      <link rel="stylesheet" href="{% static 'styles.css' %}"/>
+      <script src="{% static 'myScripts.js' %}"></script>
     
       <title>{% block title %} 
 
         {% endblock %}</title>
     </head>
-    <body class='bg-dark'>
+    <body class='main'>
       <!-- Main menu code-->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button
