--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,8 @@
       <div class='col-xs-2 col-md-3' align='right'>
         <br /><br /><br />
         <div align="right" >
-          <a href="/park" 
+          {% comment %} href="/park"  {% endcomment %}
+          <a 
             role="button" aria-disabled="true" onclick="test()">Parks</a>
         </div>
         <br /><br />
