--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
    
         <!-- End of Flash Message Code-->
         <!-- Defines where templates will be loaded-->
-       <div class="">
+       <div >
            {% block content %} 
             base page
            {% endblock %}
